# aoo-for-max

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md
docs/: aoo.client.maxref.xml  aoo.receive~.maxref.xml  aoo.send~.maxref.xml  aoo.server.maxref.xml
extras/: Aoo Overview.maxpat
help/: aoo.client.maxhelp  aoo.receive~.maxhelp  aoo.send~.maxhelp  aoo.server.maxhelp
package/AOO/: README.md  package-info.json
package/AOO for Max/docs/: aoo.server.maxref.xml
package/AOO for Max/extras/: AOO Overview.maxpat
package/AOO for Max/help/: aoo.client.maxhelp
package/AOO for Max/patchers/: aoo.helpfiles.maxpat  aoo.meta.maxpat
package/Aoo for Max/: LICENSE  README.md  package-info.json
package/Aoo for Max/docs/: aoo.client.maxref.xml  aoo.receive~.maxref.xml  aoo.send~.maxref.xml  aoo.server.maxref.xml
package/Aoo for Max/extras/: Aoo Overview.maxpat
package/Aoo for Max/help/: aoo.client.maxhelp  aoo.receive~.maxhelp  aoo.send~.maxhelp  aoo.server.maxhelp
package/Aoo for Max/patchers/: aoo.aoolink.maxpat  aoo.helpfiles.maxpat  aoo.meta.maxpat  aoo.overview.maxpat
patchers/: aoo.overview.maxpat
source/aoo.client/: CMakeLists.txt  aoo_client.cpp  aoo_client.h  aoo_node.cpp
source/aoo.receive_tilde/: CMakeLists.txt  aoo_receive_tilde.cpp  aoo_receive_tilde.h
source/aoo.send_tilde/: CMakeLists.txt  aoo_common.cpp  aoo_node.cpp  aoo_send_tilde.cpp  aoo_send_tilde.h  aoo_setup.cpp
source/aoo.server/: CMakeLists.txt  aoo_server.cpp
source/aoo_send_tilde/: aoo_send_tilde.c
source/aoo_send_tilde.c/: aoo_send_tilde.c
source/aoo_template/: CMakeLists.txt
source/aoo_template_tilde/: CMakeLists.txt  simplemsp~.c
source/common/: CMakeLists.txt  aoo_common.cpp  aoo_max_client.cpp  aoo_max_common.cpp  aoo_max_dejitter.cpp  aoo_max_node.cpp  aoo_node.cpp  dejitter.cpp
source/include/: aoo_common.hpp  aoo_max_client.h  aoo_max_common.hpp  aoo_max_dejitter.h  aoo_max_globals.h  aoo_max_node.h  aoo_max_server.h  aoo_receive_tilde.h  aoo_send_tilde.h
translation/: pd_max.md
